[gd_scene load_steps=4 format=3 uid="uid://2eewjl0nd8t5"]

[ext_resource type="Script" path="res://lyrics_viewer/ruby_lyrics_view/settings/display.gd" id="1_2lrt5"]

[sub_resource type="ButtonGroup" id="ButtonGroup_4a4g2"]
resource_name = "Font"

[sub_resource type="ButtonGroup" id="ButtonGroup_u4b45"]
resource_name = "horizontal"

[node name="Display" type="MarginContainer"]
offset_right = 600.0
offset_bottom = 400.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_2lrt5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Typeface"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBoxFontFile" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_4a4g2")

[node name="ButtonFontFile" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "FontFile"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBoxSysFont" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_4a4g2")

[node name="ButtonSysFont" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
action_mode = 1
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
columns = 3

[node name="Space" type="Control" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="LabelSize" type="Label" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Size"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LabelOutline" type="Label" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Outline"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LabelRuby" type="Label" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Ruby"

[node name="SpinBoxRubySize" type="SpinBox" parent="VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 128.0
value = 16.0
alignment = 1

[node name="SpinBoxRubyOutline" type="SpinBox" parent="VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 64.0
alignment = 1

[node name="LabelBase" type="Label" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Base"

[node name="SpinBoxBaseSize" type="SpinBox" parent="VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 256.0
value = 32.0
alignment = 1

[node name="SpinBoxBaseOutline" type="SpinBox" parent="VBoxContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 128.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Fill"
horizontal_alignment = 1

[node name="ColorPickerActiveFill" type="ColorPickerButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerStandbyFill" type="ColorPickerButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerSleepFill" type="ColorPickerButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Stroke"
horizontal_alignment = 1

[node name="ColorPickerActiveStroke" type="ColorPickerButton" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerStandbyStroke" type="ColorPickerButton" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerSleepStroke" type="ColorPickerButton" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back"
horizontal_alignment = 1

[node name="ColorPickerActiveBack" type="ColorPickerButton" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerBackground" type="ColorPickerButton" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
disabled = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Horizontal"
horizontal_alignment = 1

[node name="ButtonLeft" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_u4b45")
text = "Left"

[node name="ButtonCenter" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_u4b45")
text = "Center"

[node name="ButtonRight" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_u4b45")
text = "Right"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Padding"
horizontal_alignment = 1

[node name="SpinBoxLeft" type="SpinBox" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SpinBoxRight" type="SpinBox" parent="VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 4

[node name="Label" type="Control" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Line Height"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Ruby Distance"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "No Ruby Space"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label5" type="Label" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Adjust"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBoxLineHeight" type="SpinBox" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -256.0
max_value = 256.0
alignment = 1

[node name="SpinBoxRubyDistance" type="SpinBox" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -128.0
max_value = 128.0
alignment = 1

[node name="SpinBoxNoRubySpace" type="SpinBox" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -128.0
max_value = 128.0
alignment = 1

[node name="HBoxContainer3" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Scroll"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButtonScrollCenter" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Center"

[node name="CheckButtonScrollContinuous" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Continuous"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Fade In/Out"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBoxFadeIn" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.1
value = 0.5
alignment = 1

[node name="SpinBoxFadeOut" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.1
value = 0.5
alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(600, 440)
unresizable = true
ok_button_text = "開く"
file_mode = 0
access = 2
filters = PackedStringArray("*.ttf, *.ttc, *.otf, *.otc, *.woff, *.woff2 ; Font file")

[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/CheckBoxFontFile" to="." method="_on_check_box_font_file_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ButtonFontFile" to="." method="_on_button_font_file_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/CheckBoxSysFont" to="." method="_on_check_box_sys_font_toggled"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ButtonSysFont" to="." method="_on_button_sys_font_item_selected"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/GridContainer/SpinBoxRubySize" to="." method="_on_spin_box_ruby_size_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/GridContainer/SpinBoxRubyOutline" to="." method="_on_spin_box_ruby_outline_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/GridContainer/SpinBoxBaseSize" to="." method="_on_spin_box_base_size_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/GridContainer/SpinBoxBaseOutline" to="." method="_on_spin_box_base_outline_value_changed"]
[connection signal="color_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/ColorPickerActiveFill" to="." method="_on_color_picker_active_fill_color_changed"]
[connection signal="color_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/ColorPickerStandbyFill" to="." method="_on_color_picker_standby_fill_color_changed"]
[connection signal="color_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/ColorPickerSleepFill" to="." method="_on_color_picker_sleep_fill_color_changed"]
[connection signal="color_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/ColorPickerActiveStroke" to="." method="_on_color_picker_active_stroke_color_changed"]
[connection signal="color_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/ColorPickerStandbyStroke" to="." method="_on_color_picker_standby_stroke_color_changed"]
[connection signal="color_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/ColorPickerSleepStroke" to="." method="_on_color_picker_sleep_stroke_color_changed"]
[connection signal="color_changed" from="VBoxContainer/VBoxContainer/HBoxContainer3/ColorPickerActiveBack" to="." method="_on_color_picker_active_back_color_changed"]
[connection signal="color_changed" from="VBoxContainer/VBoxContainer/HBoxContainer3/ColorPickerBackground" to="." method="_on_color_picker_background_color_changed"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer2/HBoxContainer/ButtonLeft" to="." method="_on_button_left_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer2/HBoxContainer/ButtonCenter" to="." method="_on_button_center_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer2/HBoxContainer/ButtonRight" to="." method="_on_button_right_toggled"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer2/SpinBoxLeft" to="." method="_on_spin_box_left_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer2/SpinBoxRight" to="." method="_on_spin_box_right_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/SpinBoxLineHeight" to="." method="_on_spin_box_line_height_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/SpinBoxRubyDistance" to="." method="_on_spin_box_ruby_distance_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/SpinBoxNoRubySpace" to="." method="_on_spin_box_no_ruby_space_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/CheckButtonScrollCenter" to="." method="_on_check_button_scroll_center_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/CheckButtonScrollContinuous" to="." method="_on_check_button_scroll_continuous_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/SpinBoxFadeIn" to="." method="_on_spin_box_fade_in_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/SpinBoxFadeOut" to="." method="_on_spin_box_fade_out_value_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
